# lle_gui

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html  lle_gui.js  lle_gui_bg.wasm  sw.js
.github/workflows/: pages.yml  rust.yml
lle_gui_proc/: Cargo.toml
lle_gui_proc/src/: lib.rs
src/: config.rs  configer.rs  construct.rs  core.rs  drawer.rs  file.rs  lib.rs  main.rs  notify.rs  property.rs  random.rs  test_app.rs  util.rs  views.rs
src/app/: core.rs  debugger.rs  dispersion.rs  impls.rs  mod.rs  show_dispersion.rs  storage.rs
src/checkpoint/: mod.rs
src/controller/: clle.rs  cprt.rs  cprt1.rs  cprt2.rs  disper.rs  disper2.rs  disper_2modes.rs  dual_pulse_pump.rs  fp.rs  interleave_self_pump.rs  mod.rs  pulse_pump.rs  self_pump.rs  traits.rs
src/controller/gencprt/: cprt_disper.rs  debugger.rs  mod.rs  ops.rs  state.rs  visualizer.rs  walkoff.rs
src/drawer/: auto_bound.rs  backend.rs  chart.rs  history.rs  map.rs  mod.rs  plot_item.rs  plot_kind.rs  process.rs  processor.rs
src/drawer/colormap/: mod.rs
src/drawer/colormap/gpu/: axis.rs  compute.wgsl  fft.wgsl  mod.rs  resource.rs  shader.wgsl  trait_impl.rs  utils.wgsl  vertex.rs
src/drawer/colormap/plotters/: backend.rs  map.rs
src/drawer/gpu/: axis.rs  colormap.rs  compute.wgsl  mod.rs  resource.rs  trait_impl.rs
src/drawer/plotters/: backend.rs  map.rs  mod.rs
src/easy_mark/: README.md  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs  mod.rs
src/file/: mod.rs  native.rs  wasm.rs
src/lle_util/: interleave_self_pump.rs  mod.rs  nonlin_ops.rs  pulse_pump.rs  self_pump.rs
src/preview/: impls.rs  mod.rs  refresh.rs
src/property/: mod.rs  value_ranged.rs
src/scouting/: impls.rs  mod.rs  refresh.rs
src/util/: mod.rs  show_stuff.rs  sync_stuff.rs
src/views/: impls.rs  mod.rs  traits.rs
ui_traits/: Cargo.toml
ui_traits/src/: lib.rs
ui_traits_proc/: Cargo.toml
ui_traits_proc/src/: lib.rs  test.rs
