[package]
name = "lle_gui"
version = "0.1.0"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gpu"]
gpu = ["eframe/wgpu", "dep:wgpu"]
plotters = ["dep:plotters", "plotters-backend"]

[dependencies]
eframe = { version = "^0.29", default-features = false, features = [
    "wayland",
    "web_screen_reader",
    "x11",
    "accesskit",         # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",     # Embed the default egui fonts.
    "wgpu",              # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",       # Enable restoring app state when restarting the app.
    "puffin",
] }

egui = "^0.29"
wgpu = { version = "^22", features = ["webgpu", "webgl"], optional = true }
puffin_egui = { version = "^0.29", git = "https://github.com/tedsteen/puffin.git", rev = "11771eb" } #remove git after crates updated

egui_plot = "^0.29"

serde = { version = "^1", features = [
    "derive",
] } # You only need this if you want app persistence
lle = { git = "https://github.com/TsuITOAR/Lle.git", default-features = false, features = [
    "puffin",
] }
rand = "^0.8"
anyhow = "^1"
log = "^0.4"
enum-iterator = "^2"
getset = "^0.1"

#egui-plotter = "^0.3"
plotters = { version = "^0.3", optional = true }
plotters-backend = { version = "^0.3", optional = true }

num-traits = "^0.2.19"
iterator_ilp = "^2.1.2"
colorous = "^1.0.14"
bytemuck = "^1.19.0"
rayon = "^1"
rand_distr = { version = "^0.4.3", features = ["serde1"] }
egui-notify = "^0.17"
bincode = "1.3.3"
rfd = "0.15.0"
#rfd = "0.15.0"
#bincode = "1.3.3"
#rayon = { version = "^1.8", optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
puffin = { version = "^0.19", git = "https://github.com/tedsteen/puffin.git", rev = "11771eb", features = [
    "packing",
] }
env_logger = "^0.11"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
puffin = { version = "^0.19", git = "https://github.com/tedsteen/puffin.git", rev = "11771eb", features = [
    "packing",
    "web",
] }
wasm-bindgen-futures = "^0.4"
getrandom = { version = "^0.2", features = ["js"] }
#wasm-bindgen = "^0.2"
instant = { version = "^0.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "^0.1"
tokio = { version = "1.41.1", features = ["sync"] }
#wasm-bindgen-rayon = "1.2"

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch."https://github.com/TsuITOAR/Lle.git"]
lle = { path = "../Lle" }
