[package]
name = "lle_gui"
version = "0.1.0"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gpu"]
gpu = ["eframe/wgpu", "dep:wgpu"]
plotters = ["dep:plotters", "plotters-backend"]

[dependencies]
eframe = { version = "^0.30", default-features = false, features = [
    "wayland",
    "web_screen_reader",
    "x11",
    "accesskit",         # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",     # Embed the default egui fonts.
    "wgpu",              # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",       # Enable restoring app state when restarting the app.
] }

egui = "^0.30"
wgpu = { version = "^23", features = ["webgpu", "webgl"], optional = true }
puffin_egui = { version = "^0.29", git = "https://github.com/tedsteen/puffin.git", rev = "3be326c" } #remove git after crates updated

puffin = { version = "^0.19", git = "https://github.com/tedsteen/puffin.git", rev = "3be326c", features = [
    "web",
    "packing",
] } #remove git after crates updated

egui_plot = "^0.30"

lle = { git = "https://github.com/TsuITOAR/Lle.git", default-features = false, features = [
] }

serde = { version = "^1", features = [
    "derive",
] } # You only need this if you want app persistence
rand = "^0.8"
anyhow = "^1"
log = "^0.4"
enum-iterator = "^2"
getset = "^0.1"

#egui-plotter = "^0.3"
plotters = { version = "^0.3", optional = true }
plotters-backend = { version = "^0.3", optional = true }

num-traits = "^0.2.19"
iterator_ilp = "^2.1.2"
colorous = "^1.0.14"
bytemuck = "^1.19.0"
rayon = "^1"
rand_distr = { version = "^0.4.3", features = ["serde1"] }
egui-notify = "^0.18"
rfd = "0.15.0"
static_assertions = "1.1.0"

ui_traits = { path = "./ui_traits" }
ron = "0.8.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "^0.11"
tokio = { version = "^1", features = ["rt", "rt-multi-thread"] }
poll-promise = { version = "0.3.0", git = "https://github.com/TsuITOAR/poll-promise", features = [
    "tokio",
] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "^0.4"
getrandom = { version = "^0.2", features = ["js"] }
#wasm-bindgen = "^0.2"
instant = { version = "^0.1", features = ["wasm-bindgen"] }
console_error_panic_hook = "^0.1"
poll-promise = { version = "0.3.0", git = "https://github.com/TsuITOAR/poll-promise", features = [
    "web",
] }
# tokio = { version = "1.41.1", features = ["sync"] }


[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch."https://github.com/TsuITOAR/Lle.git"]
lle = { path = "../Lle" }


[patch."https://github.com/TsuITOAR/poll-promise.git"]
# poll-promise = { path = "../poll-promise" }


[dev-dependencies]
assert_approx_eq = "1"
